// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TranslationsPanel snapshots should render empty state when does not have fields enabled 1`] = `
<div
  className="translations-panel"
>
  <div
    className="translations-panel__header"
  >
    Traduções
  </div>
  <div
    className="translations-panel__empty-state"
  >
    <p
      className="paragraph"
    >
      Você pode habilitar traduções através da página de preferências.
    </p>
  </div>
</div>
`;

exports[`TranslationsPanel snapshots should render with 1 column 1`] = `
<div
  className="translations-panel"
>
  <div
    className="translations-panel__header"
  >
    Traduções
  </div>
  <div
    className="translations-panel__fields"
  >
    <div
      className="translations-panel__field-row"
    >
      <div
        className="translations-panel__field translations-panel__field--columns-1"
      >
        <div
          className="translation-field"
        >
          <div
            className="translation-field__flag"
          >
            <div
              className="translation-field__icon"
              title="Espanhol"
            >
              <div
                className="icon icon--small"
              >
                <svg>
                  spain.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            className="input-text"
          >
            <input
              className="input-text__input input-text__input--disabled input-text__input--borderless"
              disabled={true}
              onChange={[Function]}
              placeholder="Selecione um item na lista"
              spellCheck={false}
              type="text"
              value=""
            />
            <div
              className="input-text__copy-button"
            >
              <div
                className="copy-text-button"
                onClick={[Function]}
                title="Copiar"
              >
                <div
                  className="icon icon--small"
                >
                  <svg
                    fill="none"
                    height="1em"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth="2"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      height="13"
                      rx="2"
                      ry="2"
                      width="13"
                      x="9"
                      y="9"
                    />
                    <path
                      d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="translations-panel__field-row"
    >
      <div
        className="translations-panel__field translations-panel__field--columns-1"
      >
        <div
          className="translation-field"
        >
          <div
            className="translation-field__flag"
          >
            <div
              className="translation-field__icon"
              title="Finlandês"
            >
              <div
                className="icon icon--small"
              >
                <svg>
                  finland.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            className="input-text"
          >
            <input
              className="input-text__input input-text__input--disabled input-text__input--borderless"
              disabled={true}
              onChange={[Function]}
              placeholder="Selecione um item na lista"
              spellCheck={false}
              type="text"
              value=""
            />
            <div
              className="input-text__copy-button"
            >
              <div
                className="copy-text-button"
                onClick={[Function]}
                title="Copiar"
              >
                <div
                  className="icon icon--small"
                >
                  <svg
                    fill="none"
                    height="1em"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth="2"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      height="13"
                      rx="2"
                      ry="2"
                      width="13"
                      x="9"
                      y="9"
                    />
                    <path
                      d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="translations-panel__field-row"
    >
      <div
        className="translations-panel__field translations-panel__field--columns-1"
      >
        <div
          className="translation-field"
        >
          <div
            className="translation-field__flag"
          >
            <div
              className="translation-field__icon"
              title="Francês"
            >
              <div
                className="icon icon--small"
              >
                <svg>
                  france.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            className="input-text"
          >
            <input
              className="input-text__input input-text__input--disabled input-text__input--borderless"
              disabled={true}
              onChange={[Function]}
              placeholder="Selecione um item na lista"
              spellCheck={false}
              type="text"
              value=""
            />
            <div
              className="input-text__copy-button"
            >
              <div
                className="copy-text-button"
                onClick={[Function]}
                title="Copiar"
              >
                <div
                  className="icon icon--small"
                >
                  <svg
                    fill="none"
                    height="1em"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth="2"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      height="13"
                      rx="2"
                      ry="2"
                      width="13"
                      x="9"
                      y="9"
                    />
                    <path
                      d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="translations-panel__field-row"
    >
      <div
        className="translations-panel__field translations-panel__field--columns-1"
      >
        <div
          className="translation-field"
        >
          <div
            className="translation-field__flag"
          >
            <div
              className="translation-field__icon"
              title="Português (Brasil)"
            >
              <div
                className="icon icon--small"
              >
                <svg>
                  brazil.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            className="input-text"
          >
            <input
              className="input-text__input input-text__input--disabled input-text__input--borderless"
              disabled={true}
              onChange={[Function]}
              placeholder="Selecione um item na lista"
              spellCheck={false}
              type="text"
              value=""
            />
            <div
              className="input-text__copy-button"
            >
              <div
                className="copy-text-button"
                onClick={[Function]}
                title="Copiar"
              >
                <div
                  className="icon icon--small"
                >
                  <svg
                    fill="none"
                    height="1em"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth="2"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      height="13"
                      rx="2"
                      ry="2"
                      width="13"
                      x="9"
                      y="9"
                    />
                    <path
                      d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TranslationsPanel snapshots should render with 2 columns 1`] = `
<div
  className="translations-panel"
>
  <div
    className="translations-panel__header"
  >
    Traduções
  </div>
  <div
    className="translations-panel__fields"
  >
    <div
      className="translations-panel__field-row"
    >
      <div
        className="translations-panel__field translations-panel__field--columns-2"
      >
        <div
          className="translation-field"
        >
          <div
            className="translation-field__flag"
          >
            <div
              className="translation-field__icon"
              title="Espanhol"
            >
              <div
                className="icon icon--small"
              >
                <svg>
                  spain.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            className="input-text"
          >
            <input
              className="input-text__input input-text__input--disabled input-text__input--borderless"
              disabled={true}
              onChange={[Function]}
              placeholder="Selecione um item na lista"
              spellCheck={false}
              type="text"
              value=""
            />
            <div
              className="input-text__copy-button"
            >
              <div
                className="copy-text-button"
                onClick={[Function]}
                title="Copiar"
              >
                <div
                  className="icon icon--small"
                >
                  <svg
                    fill="none"
                    height="1em"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth="2"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      height="13"
                      rx="2"
                      ry="2"
                      width="13"
                      x="9"
                      y="9"
                    />
                    <path
                      d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="translations-panel__field translations-panel__field--columns-2"
      >
        <div
          className="translation-field"
        >
          <div
            className="translation-field__flag"
          >
            <div
              className="translation-field__icon"
              title="Finlandês"
            >
              <div
                className="icon icon--small"
              >
                <svg>
                  finland.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            className="input-text"
          >
            <input
              className="input-text__input input-text__input--disabled input-text__input--borderless"
              disabled={true}
              onChange={[Function]}
              placeholder="Selecione um item na lista"
              spellCheck={false}
              type="text"
              value=""
            />
            <div
              className="input-text__copy-button"
            >
              <div
                className="copy-text-button"
                onClick={[Function]}
                title="Copiar"
              >
                <div
                  className="icon icon--small"
                >
                  <svg
                    fill="none"
                    height="1em"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth="2"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      height="13"
                      rx="2"
                      ry="2"
                      width="13"
                      x="9"
                      y="9"
                    />
                    <path
                      d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="translations-panel__field-row"
    >
      <div
        className="translations-panel__field translations-panel__field--columns-2"
      >
        <div
          className="translation-field"
        >
          <div
            className="translation-field__flag"
          >
            <div
              className="translation-field__icon"
              title="Francês"
            >
              <div
                className="icon icon--small"
              >
                <svg>
                  france.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            className="input-text"
          >
            <input
              className="input-text__input input-text__input--disabled input-text__input--borderless"
              disabled={true}
              onChange={[Function]}
              placeholder="Selecione um item na lista"
              spellCheck={false}
              type="text"
              value=""
            />
            <div
              className="input-text__copy-button"
            >
              <div
                className="copy-text-button"
                onClick={[Function]}
                title="Copiar"
              >
                <div
                  className="icon icon--small"
                >
                  <svg
                    fill="none"
                    height="1em"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth="2"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      height="13"
                      rx="2"
                      ry="2"
                      width="13"
                      x="9"
                      y="9"
                    />
                    <path
                      d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="translations-panel__field translations-panel__field--columns-2"
      >
        <div
          className="translation-field"
        >
          <div
            className="translation-field__flag"
          >
            <div
              className="translation-field__icon"
              title="Português (Brasil)"
            >
              <div
                className="icon icon--small"
              >
                <svg>
                  brazil.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            className="input-text"
          >
            <input
              className="input-text__input input-text__input--disabled input-text__input--borderless"
              disabled={true}
              onChange={[Function]}
              placeholder="Selecione um item na lista"
              spellCheck={false}
              type="text"
              value=""
            />
            <div
              className="input-text__copy-button"
            >
              <div
                className="copy-text-button"
                onClick={[Function]}
                title="Copiar"
              >
                <div
                  className="icon icon--small"
                >
                  <svg
                    fill="none"
                    height="1em"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth="2"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      height="13"
                      rx="2"
                      ry="2"
                      width="13"
                      x="9"
                      y="9"
                    />
                    <path
                      d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TranslationsPanel snapshots should render with 3 columns 1`] = `
<div
  className="translations-panel"
>
  <div
    className="translations-panel__header"
  >
    Traduções
  </div>
  <div
    className="translations-panel__fields"
  >
    <div
      className="translations-panel__field-row"
    >
      <div
        className="translations-panel__field translations-panel__field--columns-3"
      >
        <div
          className="translation-field"
        >
          <div
            className="translation-field__flag"
          >
            <div
              className="translation-field__icon"
              title="Espanhol"
            >
              <div
                className="icon icon--small"
              >
                <svg>
                  spain.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            className="input-text"
          >
            <input
              className="input-text__input input-text__input--disabled input-text__input--borderless"
              disabled={true}
              onChange={[Function]}
              placeholder="Selecione um item na lista"
              spellCheck={false}
              type="text"
              value=""
            />
            <div
              className="input-text__copy-button"
            >
              <div
                className="copy-text-button"
                onClick={[Function]}
                title="Copiar"
              >
                <div
                  className="icon icon--small"
                >
                  <svg
                    fill="none"
                    height="1em"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth="2"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      height="13"
                      rx="2"
                      ry="2"
                      width="13"
                      x="9"
                      y="9"
                    />
                    <path
                      d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="translations-panel__field translations-panel__field--columns-3"
      >
        <div
          className="translation-field"
        >
          <div
            className="translation-field__flag"
          >
            <div
              className="translation-field__icon"
              title="Finlandês"
            >
              <div
                className="icon icon--small"
              >
                <svg>
                  finland.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            className="input-text"
          >
            <input
              className="input-text__input input-text__input--disabled input-text__input--borderless"
              disabled={true}
              onChange={[Function]}
              placeholder="Selecione um item na lista"
              spellCheck={false}
              type="text"
              value=""
            />
            <div
              className="input-text__copy-button"
            >
              <div
                className="copy-text-button"
                onClick={[Function]}
                title="Copiar"
              >
                <div
                  className="icon icon--small"
                >
                  <svg
                    fill="none"
                    height="1em"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth="2"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      height="13"
                      rx="2"
                      ry="2"
                      width="13"
                      x="9"
                      y="9"
                    />
                    <path
                      d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="translations-panel__field translations-panel__field--columns-3"
      >
        <div
          className="translation-field"
        >
          <div
            className="translation-field__flag"
          >
            <div
              className="translation-field__icon"
              title="Francês"
            >
              <div
                className="icon icon--small"
              >
                <svg>
                  france.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            className="input-text"
          >
            <input
              className="input-text__input input-text__input--disabled input-text__input--borderless"
              disabled={true}
              onChange={[Function]}
              placeholder="Selecione um item na lista"
              spellCheck={false}
              type="text"
              value=""
            />
            <div
              className="input-text__copy-button"
            >
              <div
                className="copy-text-button"
                onClick={[Function]}
                title="Copiar"
              >
                <div
                  className="icon icon--small"
                >
                  <svg
                    fill="none"
                    height="1em"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth="2"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      height="13"
                      rx="2"
                      ry="2"
                      width="13"
                      x="9"
                      y="9"
                    />
                    <path
                      d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="translations-panel__field-row"
    >
      <div
        className="translations-panel__field translations-panel__field--columns-3"
      >
        <div
          className="translation-field"
        >
          <div
            className="translation-field__flag"
          >
            <div
              className="translation-field__icon"
              title="Português (Brasil)"
            >
              <div
                className="icon icon--small"
              >
                <svg>
                  brazil.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            className="input-text"
          >
            <input
              className="input-text__input input-text__input--disabled input-text__input--borderless"
              disabled={true}
              onChange={[Function]}
              placeholder="Selecione um item na lista"
              spellCheck={false}
              type="text"
              value=""
            />
            <div
              className="input-text__copy-button"
            >
              <div
                className="copy-text-button"
                onClick={[Function]}
                title="Copiar"
              >
                <div
                  className="icon icon--small"
                >
                  <svg
                    fill="none"
                    height="1em"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth="2"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      height="13"
                      rx="2"
                      ry="2"
                      width="13"
                      x="9"
                      y="9"
                    />
                    <path
                      d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
